2008-03-03 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomatic-rip.c: Fixed minor bug in option parsing
	* pdf.cc/pdf.h: Beginning of pdf printing support. Printing is done
	  via ghostscript, using the commandline in the ppd file that is already
	  used for rendering postscript.

2008-01-26 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomatic-rip: Fixed minor bugs found while testing foomatic-rip
	  with cups.

2008-01-22 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomatic-rip: Merged foomatic-gswrapper into foomatic-rip.
	* *: Fixed 'make install'

2008-01-14 Lars Uebernickel <larsuebernickel@gmx.de>
	* *: Added support for CUPS custom options
	  (see http://www.cups.org/documentation.php/spec-ppd.html#OPTIONS)
	   o PPD files can contain both CUPS and foomatic custom options
	   o Custom options can be set like this on the command line:
	   		Options with a single parameter:
	   			-o optionname=Custom.value  or
	   		    -o optionname=value
	   		Options with multiple parameters:
	   		    -o optionname={param1=value1 param2=value2 ...}

	* options.c: Refactored the options system to allow for custom 
	  options. As a nice side effect, lots of redundant code (getting
	  commands / drivervalues for the options, syncing PageSize
	  and PageRegion) could be removed from foomaticrip.c.

2007-12-21 Lars Uebernickel <larsuebernickel@gmx.de>
	* *: Converted foomatic-rip to C and updated the build system.

2007-12-04  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-gswrapper.in: Let Ghostscript always use buffered
	  input. This works around a Ghostscript bug which prevents
	  printing encrypted PDF files with Adobe Reader 8.1.1 and
	  Ghostscript built as shared library (Ghostscript bug #689577,
	  Ubuntu bug #172264).

2007-11-30  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: More bug fixes:
	   o If the CUPS-style duples option
	     "-o sides={one|two}-sided[-{long|short}-edge]" was supplied,