@@ -1,3 +1,7 @@
+2008-03-04 Lars Uebernickel <larsuebernickel@gmx.de>
+	* foomatic-rip.c, options.c: Use default values for custom options with
+	  wrong parameters (e.g. PageSize=Custom) - Ubuntu bug #196687
+
 2008-03-03 Lars Uebernickel <larsuebernickel@gmx.de>
 	* foomatic-rip.c: Fixed minor bug in option parsing
 	* pdf.cc/pdf.h: Beginning of pdf printing support. Printing is done
